--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
----
-script: "./script/cibuild"
-gemfile: "this/does/not/exist"
 rvm:
-  - "1.8.7"
+- 1.8.7
+- 2.0.0
+before_install:
+- gem update --system 2.1.11
+- gem --version
+script: ./script/cibuild
+gemfile: this/does/not/exist
